# nexus-trader

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  ai_context.py  config.py  main.py  models.py  models_extra.py
backend/api/: ai_routes.py  app.py  routes.py  routes_webhook.py  settings_routes.py  state.py  websocket.py
backend/binance/: __init__.py  binance_client.py  binance_client_extension.py  binance_ws.py
backend/core/: __init__.py  automation_engine.py  execution_engine.py  ohlcv_provider.py  portfolio_engine.py  portfolio_engine_extension.py  price_cache.py  risk_manager.py  strategy_engine.py  trade_logic.py
backend/journal/: journal.py  telegram_alerts.py  (+1 more)
backtesting/: backtest_engine.py  optimize.py  requirements_backtest.txt  walk_forward.py
broker_adapter/: chart_markers.ts  tradingview_broker.ts
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
monitoring/: alerts.yml  prometheus.yml
nginx/: nginx.conf
pine_script/: README.md  nexus_webhook_strategy.pine  webhook_template.pine
scripts/: backup.sh  check_env.sh  curl_examples.sh  deploy.sh  emergency_stop.sh  letsencrypt.sh  setup_ubuntu.sh  smoke_test.py  start_dev.sh  status.sh  stop_dev.sh  test.sh  testnet_keys.md
tests/: conftest.py  test_automation_engine.py  test_execution_engine.py  test_risk_manager.py  test_strategy_engine.py  test_trade_logic.py
(+77 files in other folders)
